@@ -191,6 +191,10 @@
   blit_sw:    True if software Surface blitting is accelerated
   blit_sw_CC: True if software Surface colorkey blitting is accelerated
   blit_sw_A:  True if software Surface pixel alpha blitting is acclerated
+  current_h, current_h:  Width and height of the current video mode, or of the
+    desktop mode if called before the display.set_mode is called.
+    (current_h, current_w are available since SDL 1.2.10, and pygame 1.8.0)
+    They are -1 on error, or if an old SDL is being used.
 </pre>
 <!--COMMENTS:pygame.display.Info--> &nbsp;<br> 
 <br></ul>
