@@ -6,7 +6,7 @@ Pygame Readme Information
 <font size=+5><b>Pygame Readme</b></font>
 </td></tr><tr><td align=left width=33%><big>
 
-Version 1.8.0pre
+Version 1.8.0rc1
 
 
 </td><td align=center width=34%><big>
